--- a/layouts/partials/views/community/schedule.html
+++ b/layouts/partials/views/community/schedule.html
@@ -3,12 +3,22 @@
 {{ $item := .item }}
 {{/* Dynamic view adjusts to content type. */}}
 {{ $show_authors_only := false }}{{/* Show authors only or full metadata? */}}
+
+{{/* Handle placeholder entries for missing lessons */}}
+{{ $is_placeholder := $item.Params.placeholder | default false }}
+
 {{ $link := $item.RelPermalink }}
 {{ $target := "" }}
-{{ if $item.Params.external_link }}
-  {{ $link = $item.Params.external_link }}
-  {{ $target = "target=\"_blank\" rel=\"noopener\"" }}
+{{ if $is_placeholder }}
+  {{ $link = "#" }}
+  {{ $target = "" }}
+{{ else }}
+  {{ if $item.Params.external_link }}
+    {{ $link = $item.Params.external_link }}
+    {{ $target = "target=\"_blank\" rel=\"noopener\"" }}
+  {{ end }}
 {{ end }}
+
 {{ if eq $item.Type "event" }}
   {{ $show_authors_only = true }}
 {{ else if eq $item.Type "publication" }}
@@ -39,17 +49,28 @@
 
 <div class="media stream-item view-compact">
   <div class="media-body">
-    
+
     <div class="section-subheading article-title mb-0 mt-0">
-      <a href="{{$link}}" {{ $target | safeHTMLAttr }}>{{ printf "%s" $item.Title | printf "%s%s" " - " | printf "%s%s" (index $lesson_dict $item.Title) }}</a>
+      {{ if $is_placeholder }}
+        {{ $date := $item.Params.lesson_date | default "" }}
+        <span style="color: #666; font-style: italic;">{{ $date }} - {{ $item.Title }} (Coming Soon)</span>
+      {{ else }}
+        <a href="{{$link}}" {{ $target | safeHTMLAttr }}>{{ printf "%s" $item.Title | printf "%s%s" " - " | printf "%s%s" (index $lesson_dict $item.Title) }}</a>
+      {{ end }}
     </div>
 
     {{ with $summary }}
-    <a href="{{ $link }}" {{ $target | safeHTMLAttr }} class="summary-link">
-      <div class="article-style">
-        {{.}}
-      </div>
-    </a>
+      {{ if not $is_placeholder }}
+        <a href="{{ $link }}" {{ $target | safeHTMLAttr }} class="summary-link">
+          <div class="article-style">
+            {{.}}
+          </div>
+        </a>
+      {{ else }}
+        <div class="article-style" style="color: #999;">
+          {{.}}
+        </div>
+      {{ end }}
     {{ end }}
 
     <div class="stream-meta article-metadata">
@@ -66,10 +87,9 @@
       </div>
       {{ end }}
 
-
     </div>
 
-    {{ if $has_attachments }}
+    {{ if and $has_attachments (not $is_placeholder) }}
     <div class="btn-links">
       {{ partial "page_links" (dict "page" $item "is_list" 1) }}
     </div>
@@ -77,13 +97,15 @@
 
   </div>
   <div class="ml-3">
-    {{ $resource := ($item.Resources.ByType "image").GetMatch "*featured*" }}
-    {{ with $resource }}
-    {{ $image := .Resize "150x webp" }}
-    <a href="{{$link}}" {{ $target | safeHTMLAttr }}>
-      <img src="{{ $image.RelPermalink }}" height="{{ $image.Height }}" width="{{ $image.Width }}"
-           alt="{{ $item.Title }}" loading="lazy">
-    </a>
-    {{end}}
+    {{ if not $is_placeholder }}
+      {{ $resource := ($item.Resources.ByType "image").GetMatch "*featured*" }}
+      {{ with $resource }}
+      {{ $image := .Resize "150x webp" }}
+      <a href="{{$link}}" {{ $target | safeHTMLAttr }}>
+        <img src="{{ $image.RelPermalink }}" height="{{ $image.Height }}" width="{{ $image.Width }}"
+             alt="{{ $item.Title }}" loading="lazy">
+      </a>
+      {{end}}
+    {{ end }}
   </div>
 </div>
